<?xml version="1.0"?>
<package format="2">
  <name>example_submission</name>
  <version>0.1.0</version>
  <description>The example_submission</description>

  <maintainer email="peter.yu@yale.edu">Peter Yu</maintainer>

  <license>BSD</license>

  <buildtool_depend>catkin</buildtool_depend>

  <exec_depend>rospy</exec_depend>
  <exec_depend>message_runtime</exec_depend>
  <exec_depend>std_msgs</exec_depend>
  <exec_depend>geometry_msgs</exec_depend>
  <exec_depend>move_base</exec_depend>
  <exec_depend>social_navigation_layers</exec_depend>

</package>
